# kotonia-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: SETUP.md  VSCODE_EXTENSION_DESIGN_QUESTIONS.md
scripts/: fetch-url  web-search
src/: config.rs  daemon.rs  lib.rs  login.rs  main.rs  providers.rs  serve.rs
src/agent/: agent.rs  approval.rs  claude_code.rs  dispatch.rs  history.rs  mod.rs  parse.rs  prompt.rs  provider.rs  wire.rs  worktree.rs
src/ai/: deepseek.rs  local_vllm.rs  mod.rs  openai.rs  openai_compat.rs
src/execution/: host.rs
src/notifier/: mod.rs  telegram.rs
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
